# 49-bellman-ford-binance-arb

./: .gitignore  Cargo.toml  README.md  arbitrage_data.csv  dockerfile
src/: arb_detection.rs  arb_execution.rs  arbitrage.rs  bellmanford.rs  binance.rs  constants.rs  helpers.rs  main.rs  models.rs  traits.rs
src/exchanges/: binance.rs  binance_ws.rs  mod.rs
