[package]
name = "bellman_ford_pegasus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.29"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std", "reset"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.5.0"
